# rust

./: index.html  package-lock.json  package.json
.github/workflows/: build-windows.yml
src/: App.css  App.tsx  tableConfig.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src/components/: ConnectForm.css  ConnectForm.tsx  DataTable.css  DataTable.tsx  Icons.tsx  Sidebar.css  Sidebar.tsx
